[gd_scene load_steps=14 format=2]

[ext_resource path="res://Characters/Body_parts/BasicBodyPart.tscn" type="PackedScene" id=1]
[ext_resource path="res://Archives/Character2.gd" type="Script" id=2]
[ext_resource path="res://Characters/Body_parts/Anchor.tscn" type="PackedScene" id=3]
[ext_resource path="res://Characters/Body_parts/Head.tscn" type="PackedScene" id=4]
[ext_resource path="res://Characters/Body_parts/ArmTop.tscn" type="PackedScene" id=5]
[ext_resource path="res://Characters/Body_parts/ArmBottom.tscn" type="PackedScene" id=6]
[ext_resource path="res://Characters/Body_parts/LegTop.tscn" type="PackedScene" id=7]
[ext_resource path="res://Characters/Body_parts/LegBottom.tscn" type="PackedScene" id=8]
[ext_resource path="res://Characters/Scripts/Ghost.gd" type="Script" id=9]
[ext_resource path="res://icon.png" type="Texture" id=10]
[ext_resource path="res://Characters/Scripts/AnimationPlayer.gd" type="Script" id=11]



[sub_resource type="CapsuleShape2D" id=1]
radius = 1.44157
height = 25.4696

[sub_resource type="Animation" id=2]
resource_name = "Walking"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("TorsoArmAxle:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -10.0, 0.0, 0.0, 15.0, 5.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TorsoArmAxle/ArmTopBotomAxle:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -5.0, -15.0, -15.0, -10.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TorsoArmAxle2:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 15.0, 5.0, -10.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TorsoArmAxle2/ArmTopBotomAxle2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -15.0, -10.0, -5.0, -15.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TorsoLegAxle:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 20.0, -15.0, -25.0, 5.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TorsoLegAxle/LegTopBottomAxle:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 10.0, 40.0, 5.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TorsoLegAxle2:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -25.0, 5.0, 20.0, -15.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("TorsoLegAxle2/LegTopBottomAxle2:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 5.0, 0.0, 10.0, 40.0 ]
}

[node name="Character" instance=ExtResource( 1 )]
linear_damp = 1.0
angular_damp = 20.0
script = ExtResource( 2 )
power = 0.8

[node name="Sprite" parent="." index="0"]
scale = Vector2( 0.3, 0.3 )
region_rect = Rect2( 86, 0, 11, 95 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="TorsoTopAnchor" parent="." index="2" instance=ExtResource( 3 )]
position = Vector2( 0, -13.7442 )
targetPath = NodePath("../Ghost/TorsoTopTarget")
referencePath = NodePath("")

[node name="TorsoBottomAnchor" parent="." index="3" instance=ExtResource( 3 )]
position = Vector2( 0, 12.9535 )
targetPath = NodePath("../Ghost/TorsoBottomTarget")
referencePath = NodePath("")

[node name="ReferencePoint" type="Position2D" parent="." index="4"]

[node name="RayCast2D" type="RayCast2D" parent="ReferencePoint" index="0"]
enabled = true
collision_mask = 2

[node name="BodyParts" type="Node2D" parent="." index="5"]
position = Vector2( 0, -4.21632 )

[node name="Head" parent="BodyParts" index="0" instance=ExtResource( 4 )]
editor/display_folded = true
position = Vector2( 0, -9.57006 )
mass = 0.9
linear_damp = 1.0
angular_damp = 20.0

[node name="HeadAnchor" parent="BodyParts/Head" index="2" instance=ExtResource( 3 )]
position = Vector2( 0, -12.5912 )
targetPath = NodePath("../../../Ghost/TorsoHeadAxle/HeadTarget")
referencePath = NodePath("")

[node name="ArmTop" parent="BodyParts" index="1" instance=ExtResource( 5 )]
editor/display_folded = true
position = Vector2( 0, -5.95972 )
mass = 0.33
linear_damp = 1.0
angular_damp = 20.0

[node name="ArmTopAnchor" parent="BodyParts/ArmTop" index="2" instance=ExtResource( 3 )]
position = Vector2( 0, 11.0324 )
targetPath = NodePath("../../../Ghost/TorsoArmAxle/ArmTopTarget")
referencePath = NodePath("")

[node name="ArmBottom" parent="BodyParts/ArmTop" index="3" instance=ExtResource( 6 )]
editor/display_folded = true
position = Vector2( 0, 11.4021 )
mass = 0.25

[node name="ArmBottomAnchor" parent="BodyParts/ArmTop/ArmBottom" index="2" instance=ExtResource( 3 )]
position = Vector2( 0, 15.9776 )
targetPath = NodePath("../../../../Ghost/TorsoArmAxle/ArmTopBotomAxle/ArmBottomTarget")
referencePath = NodePath("")

[node name="LegTop" parent="BodyParts" index="2" instance=ExtResource( 7 )]
editor/display_folded = true
position = Vector2( 0, 17.5295 )
mass = 1.1
linear_damp = 1.0
angular_damp = 20.0

[node name="LegTopAnchor" parent="BodyParts/LegTop" index="0" instance=ExtResource( 3 )]
position = Vector2( 0, 16.8325 )
targetPath = NodePath("../../../Ghost/TorsoLegAxle/LegTopTarget")
referencePath = NodePath("")

[node name="LegBottom" parent="BodyParts/LegTop" index="3" instance=ExtResource( 8 )]
editor/display_folded = true
position = Vector2( 0, 17.4546 )
mass = 0.65

[node name="LegBottomAnchor" parent="BodyParts/LegTop/LegBottom" index="2" instance=ExtResource( 3 )]
position = Vector2( 0, 18.8209 )
targetPath = NodePath("../../../../Ghost/TorsoLegAxle/LegTopBottomAxle/LegBottomTarget")
referencePath = NodePath("")

[node name="ArmTop2" parent="BodyParts" index="3" instance=ExtResource( 5 )]
editor/display_folded = true
position = Vector2( 0, -5.95972 )
mass = 0.33
linear_damp = 1.0
angular_damp = 20.0

[node name="ArmTop2Anchor" parent="BodyParts/ArmTop2" index="0" instance=ExtResource( 3 )]
position = Vector2( 0, 11.0324 )
targetPath = NodePath("../../../Ghost/TorsoArmAxle2/ArmTop2Target")
referencePath = NodePath("")

[node name="ArmBottom2" parent="BodyParts/ArmTop2" index="3" instance=ExtResource( 6 )]
editor/display_folded = true
position = Vector2( 0, 11.4021 )
mass = 0.25

[node name="ArmBottom2Anchor" parent="BodyParts/ArmTop2/ArmBottom2" index="0" instance=ExtResource( 3 )]
position = Vector2( 0, 15.9776 )
targetPath = NodePath("../../../../Ghost/TorsoArmAxle2/ArmTopBotomAxle2/ArmBottom2Target")
referencePath = NodePath("")

[node name="LegTop2" parent="BodyParts" index="4" instance=ExtResource( 7 )]
editor/display_folded = true
position = Vector2( 0, 17.5295 )
mass = 1.1
linear_damp = 1.0
angular_damp = 20.0

[node name="LegTop2Anchor" parent="BodyParts/LegTop2" index="2" instance=ExtResource( 3 )]
position = Vector2( 0, 16.8325 )
targetPath = NodePath("../../../Ghost/TorsoLegAxle2/LegTop2Target")
referencePath = NodePath("")

[node name="LegBottom2" parent="BodyParts/LegTop2" index="3" instance=ExtResource( 8 )]
editor/display_folded = true
position = Vector2( 0, 17.4546 )
mass = 0.65

[node name="LegBottom2Anchor" parent="BodyParts/LegTop2/LegBottom2" index="2" instance=ExtResource( 3 )]
position = Vector2( 0, 18.8209 )
targetPath = NodePath("../../../../Ghost/TorsoLegAxle2/LegTopBottomAxle2/LegBottom2Target")
referencePath = NodePath("")

[node name="Pins" type="Node2D" parent="." index="6"]
editor/display_folded = true
visible = false

[node name="HeadTorsoPin" type="PinJoint2D" parent="Pins" index="0"]
position = Vector2( 0, -13.8082 )
node_a = NodePath("../..")
node_b = NodePath("../../BodyParts/Head")

[node name="TorsoArmPin" type="PinJoint2D" parent="Pins" index="1"]
position = Vector2( 0, -10.4195 )
node_a = NodePath("../..")
node_b = NodePath("../../BodyParts/ArmTop")

[node name="ArmTopBottomPin" type="PinJoint2D" parent="Pins" index="2"]
position = Vector2( 0, 0.797062 )
node_a = NodePath("../../BodyParts/ArmTop")
node_b = NodePath("../../BodyParts/ArmTop/ArmBottom")

[node name="TorsoLegPin" type="PinJoint2D" parent="Pins" index="3"]
position = Vector2( 0, 12.965 )
node_a = NodePath("../..")
node_b = NodePath("../../BodyParts/LegTop")

[node name="LegTopBottomPin" type="PinJoint2D" parent="Pins" index="4"]
position = Vector2( 0, 30.1554 )
node_a = NodePath("../../BodyParts/LegTop")
node_b = NodePath("../../BodyParts/LegTop/LegBottom")

[node name="TorsoArmPin2" type="PinJoint2D" parent="Pins" index="5"]
position = Vector2( 0, -10.4195 )
node_a = NodePath("../..")
node_b = NodePath("../../BodyParts/ArmTop2")

[node name="ArmTopBottomPin2" type="PinJoint2D" parent="Pins" index="6"]
position = Vector2( 0, 0.797062 )
node_a = NodePath("../../BodyParts/ArmTop2")
node_b = NodePath("../../BodyParts/ArmTop2/ArmBottom2")

[node name="TorsoLegPin2" type="PinJoint2D" parent="Pins" index="7"]
position = Vector2( 0, 12.965 )
node_a = NodePath("../..")
node_b = NodePath("../../BodyParts/LegTop2")

[node name="LegTopBottomPin2" type="PinJoint2D" parent="Pins" index="8"]
position = Vector2( 0, 30.1554 )
node_a = NodePath("../../BodyParts/LegTop2")
node_b = NodePath("../../BodyParts/LegTop2/LegBottom2")

[node name="Ghost" type="Node2D" parent="." index="7"]
editor/display_folded = true
visible = false
script = ExtResource( 9 )

[node name="TorsoHeadAxle" type="Position2D" parent="Ghost" index="0"]
editor/display_folded = true
position = Vector2( 0, -13.8082 )

[node name="HeadTarget" type="Position2D" parent="Ghost/TorsoHeadAxle" index="0"]
position = Vector2( 0, -12.5245 )

[node name="TorsoArmAxle" type="Position2D" parent="Ghost" index="1"]
editor/display_folded = true
position = Vector2( -1.93715e-007, -10.4195 )
rotation = 0.148167

[node name="ArmTopTarget" type="Position2D" parent="Ghost/TorsoArmAxle" index="0"]
position = Vector2( 0, 10.6509 )

[node name="ArmTopBotomAxle" type="Position2D" parent="Ghost/TorsoArmAxle" index="1"]
position = Vector2( 0, 10.6509 )
rotation = -0.204983

[node name="ArmBottomTarget" type="Position2D" parent="Ghost/TorsoArmAxle/ArmTopBotomAxle" index="0"]
position = Vector2( 0, 16.0477 )

[node name="TorsoArmAxle2" type="Position2D" parent="Ghost" index="2"]
editor/display_folded = true
position = Vector2( 1.66893e-006, -10.4195 )
rotation = -0.0609007

[node name="ArmTop2Target" type="Position2D" parent="Ghost/TorsoArmAxle2" index="0"]
position = Vector2( 0, 10.6509 )

[node name="ArmTopBotomAxle2" type="Position2D" parent="Ghost/TorsoArmAxle2" index="1"]
position = Vector2( 0, 10.6509 )
rotation = -0.200899

[node name="ArmBottom2Target" type="Position2D" parent="Ghost/TorsoArmAxle2/ArmTopBotomAxle2" index="0"]
position = Vector2( 0, 16.0609 )

[node name="TorsoLegAxle" type="Position2D" parent="Ghost" index="3"]
editor/display_folded = true
position = Vector2( -4.17233e-007, 12.4927 )
rotation = -0.0954357

[node name="LegTopTarget" type="Position2D" parent="Ghost/TorsoLegAxle" index="0"]
position = Vector2( 0, 16.907 )

[node name="LegTopBottomAxle" type="Position2D" parent="Ghost/TorsoLegAxle" index="1"]
position = Vector2( 0, 16.907 )
rotation = 0.0304504

[node name="LegBottomTarget" type="Position2D" parent="Ghost/TorsoLegAxle/LegTopBottomAxle" index="0"]
position = Vector2( 0, 19.8656 )

[node name="TorsoLegAxle2" type="Position2D" parent="Ghost" index="4"]
editor/display_folded = true
position = Vector2( 5.36442e-007, 12.4927 )
rotation = -0.0486469

[node name="LegTop2Target" type="Position2D" parent="Ghost/TorsoLegAxle2" index="0"]
position = Vector2( 0, 16.907 )

[node name="LegTopBottomAxle2" type="Position2D" parent="Ghost/TorsoLegAxle2" index="1"]
editor/display_folded = true
position = Vector2( 0, 16.907 )
rotation = 0.51543

[node name="LegBottom2Target" type="Position2D" parent="Ghost/TorsoLegAxle2/LegTopBottomAxle2" index="0"]
position = Vector2( 0, 19.8721 )

[node name="Sprite" type="Sprite" parent="Ghost/TorsoLegAxle2/LegTopBottomAxle2/LegBottom2Target" index="0"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 10 )

[node name="TorsoTopTarget" type="Position2D" parent="Ghost" index="5"]
position = Vector2( 0, -13.8082 )

[node name="TorsoBottomTarget" type="Position2D" parent="Ghost" index="6"]
position = Vector2( 0, 12.4927 )

[node name="Sprite2" type="Sprite" parent="Ghost" index="7"]
position = Vector2( 0, 3.78392 )
scale = Vector2( 0.206423, 0.196404 )
texture = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="8"]
root_node = NodePath("../Ghost")
anims/Walking = SubResource( 2 )
script = ExtResource( 11 )

